@@ -3,3 +3,5 @@ entering a password when adding a ssh remote.
 
 Using ssh on windows with an existing remote does work. So as a workaround,
 set up a passwordless ssh key that can log into the ssh server. --[[Joey]]
+
+> [[fixed|done]] --[[Joey]]
