@@ -157,7 +157,8 @@ Executable git-annex
     GHC-Options: -O2
 
   if (os(windows))
-    Build-Depends: Win32, Win32-extras, unix-compat (>= 0.4.1.3), setenv
+    Build-Depends: Win32, Win32-extras, unix-compat (>= 0.4.1.3), setenv,
+      process (>= 1.3.0.0)
   else
     Build-Depends: unix
     -- Need to list these because they're generated from .hsc files.
